--- a/views/admin/accessLog/lista.twig
+++ b/views/admin/accessLog/lista.twig
@@ -1,28 +1,30 @@
-<table class="table table-bordered table-condensed table-striped table-full">
-	<tr>
-		<th>Username</th>
-		<th>User Id</th>
-		<th>Login Time</th>
-		<th>Logout Time</th>
-		<th>Logged In</th>
-		<th>Session Id</th>
-	</tr>
-	<tbody>
-	{% for l in lista %}
+<div class="table-responsive">
+	<table class="table border text-nowrap text-md-nowrap table-striped table-bordered table-sm mb-0">
 		<tr>
-			<td>{{ l.username }}</td>
-			<td>{{ l.usuario_id }}</td>
-			<td>{{ l.login_time|date('Y-m-d H:m:s') }}</td>
-			<td>
-				{% if l.logout_time %}
-				{{ l.logout_time|date('Y-m-d H:m:s') }}</td>
-			{% endif %}
-			<td>{% if l.logged_in %} SI {% endif %}</td>
-			<td>{{ l.session_id }}</td>
-		
+			<th>Username</th>
+			<th>User Id</th>
+			<th>Login Time</th>
+			<th>Logout Time</th>
+			<th>Logged In</th>
+			<th>Session Id</th>
 		</tr>
-	{% endfor %}
-	</tbody>
-</table>
+		<tbody>
+		{% for l in lista %}
+			<tr>
+				<td>{{ l.username }}</td>
+				<td>{{ l.usuario_id }}</td>
+				<td>{{ l.login_time|date('Y-m-d H:m:s') }}</td>
+				<td>
+					{% if l.logout_time %}
+					{{ l.logout_time|date('Y-m-d H:m:s') }}</td>
+				{% endif %}
+				<td>{% if l.logged_in %} SI {% endif %}</td>
+				<td>{{ l.session_id }}</td>
+
+			</tr>
+		{% endfor %}
+		</tbody>
+	</table>
+</div>
 
 {{ pag|raw }}
