--- a/views/admin/eventos/detalle.twig
+++ b/views/admin/eventos/detalle.twig
@@ -2,68 +2,64 @@
 
 {% block content %}
 
-
-	<div class="col-lg-12">
-		<div class="ibox">
-			<div class="ibox-title">
-				<h5>Detalle del Evento</h5>
-
+	<div class="col-md-12 col-xl-12">
+		<div class="card">
+			<div class="card-header">
+				<h4 class="card-title">Detalle del Evento</h4>
 			</div>
-			<div class="ibox-content">
-				<div class="row">
-					<table class="table table-bordered table-striped">
-						<tr>
-							<th>Fecha/Hora</th>
-							<td>{{ e.fecha }}</td>
-						</tr>
-						<tr>
-							<th>Nivel</th>
-							<td>{{ e.nivel }}</td>
-						</tr>
-						<tr>
-							<th>Mensaje</th>
-							<td>{{ e.mensaje }}</td>
-						</tr>
-						<tr>
-							<th>Usuario</th>
-							<td>{{ e.usuario }}</td>
-						</tr>
-						<tr>
-							<th>Modulo</th>
-							<td>{{ e.modulo }}</td>
-						</tr>
-						<tr>
-							<th>Ip Address</th>
-							<td>{{ e.ipaddress }}</td>
-						</tr>
-						<tr>
-							<th>Datos</th>
-							<td>
-								<pre id="datos" style="width:100%;white-space: pre-wrap">{{ e.datos }}</pre>
-								{% if hayDatos %}
-									<button type="button" class="btn btn-sm btn-primary" id="btnDecode">Decodificar</button>
-								{% endif %}
+			<div class="card-body">
+				<table class="table border text-nowrap text-md-nowrap table-striped table-bordered table-sm mb-0">
+					<tr>
+						<th>Fecha/Hora</th>
+						<td>{{ e.fecha }}</td>
+					</tr>
+					<tr>
+						<th>Nivel</th>
+						<td>{{ e.nivel }}</td>
+					</tr>
+					<tr>
+						<th>Mensaje</th>
+						<td>{{ e.mensaje }}</td>
+					</tr>
+					<tr>
+						<th>Usuario</th>
+						<td>{{ e.usuario }}</td>
+					</tr>
+					<tr>
+						<th>Modulo</th>
+						<td>{{ e.modulo }}</td>
+					</tr>
+					<tr>
+						<th>Ip Address</th>
+						<td>{{ e.ipaddress }}</td>
+					</tr>
+					<tr>
+						<th>Datos</th>
+						<td>
+							<pre id="datos" style="width:100%;white-space: pre-wrap">{{ e.datos }}</pre>
+							{% if hayDatos %}
+								<button type="button" class="btn btn-sm btn-primary" id="btnDecode">Decodificar</button>
+							{% endif %}
 
-								<div id="divDecoded" style="display:none;width:80%">
-									<pre id="decoded" style="width:100%;white-space: pre-wrap"></pre>
-								</div>
+							<div id="divDecoded" style="display:none;width:80%">
+								<pre id="decoded" style="width:100%;white-space: pre-wrap"></pre>
+							</div>
 
-							</td>
-						</tr>
-					</table>
-				</div>
+						</td>
+					</tr>
+				</table>
 			</div>
 		</div>
 	</div>
 
 	<script>
 
-		$('#btnDecode').click(function () {
-			var data = $('#datos').text();
-			$('#decoded').load('{{ root }}/admin/eventos/decode', {json: data}, function(){
-				$('#divDecoded').show();
-			});
-		});
+        $('#btnDecode').click(function () {
+            var data = $('#datos').text();
+            $('#decoded').load('{{ root }}/admin/eventos/decode', {json: data}, function () {
+                $('#divDecoded').show();
+            });
+        });
 	</script>
 
 
