--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -2447,6 +2447,20 @@
             },
             mounted: function () {
                 var self = this;
+
+                if(self.aplicativo_diners_tarjeta_diners.length != 0){
+                    self.calcularValoresDiners();
+                }
+                if(self.aplicativo_diners_tarjeta_discover.length != 0){
+                    self.calcularValoresDiscover();
+                }
+                if(self.aplicativo_diners_tarjeta_interdin.length != 0){
+                    self.calcularValoresInterdin();
+                }
+                if(self.aplicativo_diners_tarjeta_mastercard.length != 0){
+                    self.calcularValoresMastercard();
+                }
+
                 $("#alerta_abono_diners").hide();
                 $("#alerta_abono_interdin").hide();
                 $("#alerta_abono_discover").hide();
