--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -179,6 +179,28 @@
 						</div>
 					</div>
 
+					<h4 class="text-primary">MOTIVO DE NO PAGO</h4>
+					<div class=" row mb-4">
+						<label for="inputName" class="col-md-2 form-label">Motivo No Pago</label>
+						<div class="col-md-4 col-informacion">
+							<select class="form-control form-select select2" v-on:change="cargarMotivoNoPagoNivel2"
+							        v-model="seguimiento.nivel_1_motivo_no_pago_id" placeholder="Seleccione una opción" id="nivel_1_motivo_no_pago_id"
+							        required v-autoname>
+								<option v-for="(v,k) in cat.paleta_motivo_no_pago_nivel_1" v-html="v" :value="k"></option>
+							</select>
+						</div>
+
+						<label for="inputName" class="col-md-2 form-label">Descripción</label>
+						<div class="col-md-4 col-informacion">
+							<select class="form-control form-select select2" v-on:change="cargarMotivoNoPagoNivel3"
+							        v-model="seguimiento.nivel_2_motivo_no_pago_id" placeholder="Seleccione una opción" id="nivel_2_motivo_no_pago_id"
+							        required v-autoname>
+								<option v-for="(v,k) in cat.paleta_motivo_no_pago_nivel_2" v-html="v" :value="k"></option>
+							</select>
+						</div>
+					</div>
+
+					<hr/>
 					<div class=" row mb-4">
 						<label for="inputName" class="col-md-2 form-label">Observaciones</label>
 						<div class="col-md-4 col-informacion">
@@ -2368,6 +2390,17 @@
                     };
                     $.post('{{ root }}/paleta/cargarNivel4', data, function (res) {
                         self.cat.paleta_nivel_4 = res;
+                        console.log(res);
+                    });
+                },
+
+                cargarMotivoNoPagoNivel2: function () {
+                    var self = this;
+                    var data = {
+                        nivel_1_motivo_no_pago_id: self.seguimiento.nivel_1_motivo_no_pago_id,
+                    };
+                    $.post('{{ root }}/paleta/cargarMotivoNoPagoNivel2', data, function (res) {
+                        self.cat.paleta_motivo_no_pago_nivel_2 = res;
                         console.log(res);
                     });
                 },
