--- a/views/producto/lista.twig
+++ b/views/producto/lista.twig
@@ -1,14 +1,13 @@
 <div class="table-responsive">
-	<table class="table border text-nowrap text-md-nowrap table-striped table-bordered table-sm mb-0">
+	<table class="table border table-striped table-bordered table-sm mb-0">
 		<thead>
 		<tr>
-			<th></th>
+			<th style="width: 90px;"></th>
 			<th>Institución</th>
 			<th>Cliente</th>
 			<th>Producto</th>
 			<th>Estado</th>
 			<th>Asignado</th>
-			<th>Fecha carga</th>
 			<th>Último seguimiento</th>
 		</tr>
 		</thead>
@@ -19,7 +18,7 @@
 					<a href="{{ root }}/producto/editar?id={{ l.id }}" target="_self" class="btn btn-icon btn-info" title="Ingresar Seguimiento">
 						<i class="fa fa-plus"></i>
 					</a>
-					<a href="{{ root }}/producto/verSeguimientos?id={{ l.id }}" target="_blank" class="btn btn-icon btn-success" title="Ver Seguimiento">
+					<a href="{{ root }}/producto/verSeguimientos?id={{ l.id }}" target="_self" class="btn btn-icon btn-success" title="Ver Seguimiento">
 						<i class="fa fa-eye"></i>
 					</a>
 				</td>
@@ -28,23 +27,28 @@
 				<td>{{ l.producto }} </td>
 				<td>{{ l.estado|upper }} </td>
 				<td>{{ l.apellidos_usuario_asignado }}&nbsp;{{ l.nombres_usuario_asignado }}</td>
-				<td>{{ l.fecha_ingreso|date("Y-m-d") }} </td>
 				<td>
 					{% if l.ultimo_seguimiento.fecha_ingreso != '' %}
-						<strong>Fecha de seguimiento: </strong>{{ l.ultimo_seguimiento.fecha_ingreso }}<br/>
+						<strong>Fecha de seguimiento: </strong><br/>{{ l.ultimo_seguimiento.fecha_ingreso }}<br/>
 						{% if l.ultimo_seguimiento.nivel1 != '' %}
-							<strong>{{ l.ultimo_seguimiento.nivel1_titulo }}: </strong>{{ l.ultimo_seguimiento.nivel1 }}<br/>
+							<strong>{{ l.ultimo_seguimiento.nivel1_titulo }}: </strong><br/>{{ l.ultimo_seguimiento.nivel1 }}<br/>
 						{% endif %}
 						{% if l.ultimo_seguimiento.nivel2 != '' %}
-							<strong>{{ l.ultimo_seguimiento.nivel2_titulo }}: </strong>{{ l.ultimo_seguimiento.nivel2 }}<br/>
+							<strong>{{ l.ultimo_seguimiento.nivel2_titulo }}: </strong><br/>{{ l.ultimo_seguimiento.nivel2 }}<br/>
 						{% endif %}
 						{% if l.ultimo_seguimiento.nivel3 != '' %}
-							<strong>{{ l.ultimo_seguimiento.nivel3_titulo }}: </strong>{{ l.ultimo_seguimiento.nivel3 }}<br/>
+							<strong>{{ l.ultimo_seguimiento.nivel3_titulo }}: </strong><br/>{{ l.ultimo_seguimiento.nivel3 }}<br/>
 						{% endif %}
 						{% if l.ultimo_seguimiento.nivel4 != '' %}
-							<strong>{{ l.ultimo_seguimiento.nivel4_titulo }}: </strong>{{ l.ultimo_seguimiento.nivel4 }}<br/>
+							<strong>{{ l.ultimo_seguimiento.nivel4_titulo }}: </strong><br/>{{ l.ultimo_seguimiento.nivel4 }}<br/>
 						{% endif %}
-						<strong>Usuario: </strong>{{ l.ultimo_seguimiento.usuario }}
+						{% if l.ultimo_seguimiento.nivel1_motivo_no_pago != '' %}
+							<strong>Motivo No Pago: </strong><br/>{{ l.ultimo_seguimiento.nivel1_motivo_no_pago }}<br/>
+						{% endif %}
+						{% if l.ultimo_seguimiento.nivel2_motivo_no_pago != '' %}
+							<strong>Descripción: </strong><br/>{{ l.ultimo_seguimiento.nivel2_motivo_no_pago }}<br/>
+						{% endif %}
+						<strong>Usuario: </strong><br/>{{ l.ultimo_seguimiento.usuario }}
 					{% endif %}
 				</td>
 			</tr>
