--- a/views/paleta/index.twig
+++ b/views/paleta/index.twig
@@ -11,19 +11,19 @@
 					<div class=" row mb-4">
 						<label for="inputName" class="col-md-2 form-label">Número</label>
 						<div class="col-md-4">
-							<input type="text" class="form-control" v-model="model.numero" placeholder="Número"/>
+							<input type="text" class="form-control" name="numero" id="numero" value="{{ filtros.numero }}"/>
 						</div>
 
 						<label for="inputName" class="col-md-2 form-label">Nombre</label>
 						<div class="col-md-4">
-							<input type="text" class="form-control" v-model="model.nombre" placeholder="Nombre"/>
+							<input type="text" class="form-control" name="nombre" id="nombre" value="{{ filtros.nombre }}"/>
 						</div>
 					</div>
 
 					<div class=" row mb-4">
 						<label for="inputName" class="col-md-2 form-label">Tipo gestión</label>
 						<div class="col-md-4">
-							<select class="form-control form-select select2" v-model="model.tipo_gestion" placeholder="Seleccione una opción">
+							<select class="form-control form-select select2" name="tipo_gestion" id="tipo_gestion">
 								<option value=""></option>
 								<option value="cobranza">COBRANZA</option>
 								<option value="venta">VENTA</option>
@@ -32,7 +32,7 @@
 
 						<label for="inputName" class="col-md-2 form-label">Tipo perfil</label>
 						<div class="col-md-4">
-							<select class="form-control form-select select2" v-model="model.tipo_perfil" placeholder="Seleccione una opción">
+							<select class="form-control form-select select2" name="tipo_perfil" id="tipo_perfil">
 								<option value=""></option>
 								<option value="telefonico">TELEFÓNICO</option>
 								<option value="campo">CAMPO</option>
@@ -68,9 +68,15 @@
 		var form = $('#filtro');
 		$('.integer').numeric('integer');
 
+        $("#tipo_gestion").val('{{ filtros.tipo_gestion }}');
+        $("#tipo_perfil").val('{{ filtros.tipo_perfil }}');
+
 		function todos() {
 			form[0].reset();
-			$("#estado").val('');
+			$("#numero").val('');
+            $("#nombre").val('');
+            $("#tipo_gestion").val('');
+            $("#tipo_perfil").val('');
 			cargar(1);
 		}
 
