--- a/views/producto/index.twig
+++ b/views/producto/index.twig
@@ -13,8 +13,8 @@
 							<label for="inputName" class="col-md-2 form-label">Institución</label>
 							<div class="col-md-4">
 								<div class="input-group">
-									<input type="text" class="form-control" placeholder="Seleccione una institución" name="institucion_nombre" id="institucion_nombre" readonly>
-									<input type="hidden" class="form-control" v-model="model.institucion_id" name="institucion_id" id="institucion_id"/>
+									<input type="text" class="form-control" name="institucion_nombre" id="institucion_nombre" value="{{ filtros.institucion_nombre }}" readonly>
+									<input type="hidden" class="form-control" name="institucion_id" id="institucion_id" value="{{ filtros.institucion_id }}"/>
 									<button class="btn btn-default" type="button" v-on:click="buscarInstitucion">
 										<i class="glyphicon glyphicon-search"></i>
 									</button>
@@ -23,26 +23,26 @@
 
 							<label for="inputName" class="col-md-2 form-label">Cédula</label>
 							<div class="col-md-4">
-								<input type="text" class="form-control" v-model="model.cedula" name="cedula" placeholder="Cédula"/>
+								<input type="text" class="form-control" name="cedula" id="cedula" value="{{ filtros.cedula }}"/>
 							</div>
 						</div>
 
 						<div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Nombres</label>
 							<div class="col-md-4">
-								<input type="text" class="form-control" v-model="model.nombres" name="nombres" placeholder="Nombres"/>
+								<input type="text" class="form-control" name="nombres" id="nombres" value="{{ filtros.nombres }}"/>
 							</div>
 
 							<label for="inputName" class="col-md-2 form-label">Producto</label>
 							<div class="col-md-4">
-								<input type="text" class="form-control" v-model="model.producto" name="producto" placeholder="Producto"/>
+								<input type="text" class="form-control" name="producto" id="producto" value="{{ filtros.producto }}"/>
 							</div>
 						</div>
 
 						<div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Teléfono</label>
 							<div class="col-md-4">
-								<input type="text" class="form-control" v-model="model.telefono" name="telefono" placeholder="Teléfono"/>
+								<input type="text" class="form-control" name="telefono" id="telefono" value="{{ filtros.telefono }}"/>
 							</div>
 						</div>
 
@@ -97,12 +97,16 @@
 		function todos() {
 			form[0].reset();
 			$("#institucion_id").val('');
+            $("#institucion_nombre").val('');
+            $("#cedula").val('');
+            $("#nombres").val('');
+            $("#producto").val('');
+            $("#telefono").val('');
 			cargar(1);
 		}
 
 		function cargar(page) {
 			var data = form.serializeArray();
-			console.log(data);
 			$('#lista').load('{{ root }}/producto/lista?page=' + page, data);
 		}
 
