--- a/views/producto/lista.twig
+++ b/views/producto/lista.twig
@@ -1,4 +1,16 @@
 <div class="table-responsive">
+	<table>
+		<tr>
+			<td style="background-color: #87CEFA; width: 20px; color: white; border: 1px solid white;"></td>
+			<td style="padding-right: 20px;">No Asignado</td>
+			<td style="background-color: #CCFFCC; width: 20px; color: white; border: 1px solid white;"></td>
+			<td style="padding-right: 20px;">Asignado Megacob</td>
+			<td style="background-color: #FFFFCC; width: 20px; color: white; border: 1px solid white;"></td>
+			<td style="padding-right: 20px;">Asignado Usuario</td>
+			<td style="background-color: #F8F8F8; width: 20px; color: white; border: 1px solid white;"></td>
+			<td style="padding-right: 20px;">Procesado</td>
+		</tr>
+	</table>
 	<table class="table border table-striped table-bordered table-sm mb-0">
 		<thead>
 		<tr>
@@ -13,7 +25,7 @@
 		</thead>
 		<tbody>
 		{% for l in lista %}
-			<tr>
+			<tr {% if l.estado == 'asignado_megacob' %} style="background-color: #CCFFCC;" {% elseif l.estado == 'asignado_usuario' %} style="background-color: #FFFFCC;" {% elseif l.estado == 'procesado' %} style="background-color: #F8F8F8;" {% elseif l.estado == 'no_asignado' %} style="background-color: #87CEFA;" {% endif %}>
 				<td>
 					<a href="{{ root }}/producto/editar?id={{ l.id }}" target="_self" class="btn btn-icon btn-info" title="Ingresar Seguimiento">
 						<i class="fa fa-plus"></i>
@@ -27,7 +39,7 @@
 				<td>{{ l.producto }} </td>
 				<td>{{ l.estado|upper }} </td>
 				<td>{{ l.apellidos_usuario_asignado }}&nbsp;{{ l.nombres_usuario_asignado }}</td>
-				<td>
+				<td style="font-size: 11px;">
 					{% if l.ultimo_seguimiento.fecha_ingreso != '' %}
 						<strong>Fecha de seguimiento: </strong><br/>{{ l.ultimo_seguimiento.fecha_ingreso }}<br/>
 						{% if l.ultimo_seguimiento.nivel1 != '' %}
