--- a/views/producto/index.twig
+++ b/views/producto/index.twig
@@ -44,6 +44,11 @@
 							<div class="col-md-4">
 								<input type="text" class="form-control" name="telefono" id="telefono" value="{{ filtros.telefono }}"/>
 							</div>
+
+							<label for="inputName" class="col-md-2 form-label">Estado</label>
+							<div class="col-md-4">
+								{{ select_tag('estado', listas.estado, '', {class:'form-control form-select select2',prompt: ''} ) }}
+							</div>
 						</div>
 
 						<div class="mb-0 mt-4 ">
@@ -94,6 +99,11 @@
 		var form = $('#filtro');
 		$('.integer').numeric('integer');
 
+        var estado_list = '{{ filtros.estado }}';
+        if(estado_list != ''){
+            $('#estado option[value={{ filtros.estado }}]').attr('selected','selected');
+        }
+
 		function todos() {
 			form[0].reset();
 			$("#institucion_id").val('');
@@ -102,6 +112,7 @@
             $("#nombres").val('');
             $("#producto").val('');
             $("#telefono").val('');
+            $("#estado").val('');
 			cargar(1);
 		}
 
